Fixed BgVideo cropping with different resolution screens.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1182,23 +1182,23 @@ input, select, textarea {
 
 */
 
-/* Style the video: 100% width and height to cover the entire window */
-	#bgVideo {
+	.video-container {
 		position: fixed;
-		right: 0;
+		top: 0;
 		bottom: 0;
+		width: 100%;
+		height: 100%;
+		overflow: hidden;
+	}
+	.video-container video {
 		min-width: 100%;
 		min-height: 100%;
-	}
-
-	/* Add some content at the bottom of the video/page */
-	.content {
+		width: auto;
+		height: auto;
 		position: fixed;
-		bottom: 0;
-		background: rgba(0, 0, 0, 0.5);
-		color: #f1f1f1;
-		width: 100%;
-		padding: 20px;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
 	}
 
 /* Wrapper */
